# tari-wallet

./: .gitignore  AGENT.md  AGENT_ENHANCED.md  Cargo.toml  HTTP_SCANNER_SUMMARY.md  README.md  UTXO_IMPLEMENTATION_SUMMARY.md  build.rs  tarpaulin-report.html  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  deploy.yml
backlog/: config.yml
backlog/tasks/: task-1 - Move-scanner-and-wallet-to-bin.md  task-2 - Fix-tests.md  task-3 - Add-Rexie-to-the-wasm.md  task-4 - Re-orgs.md  task-5 - Create-a-block-caching-service-that-stores-the-http-blocks.md
docs/: api-reference.md  developer-guide.md
documents/: audit-log.md  plan-refactor.md  tari.md  test-coverage-improvement-plan.md
examples/: enhanced_wallet_scanner.rs  extract_block_data.rs  grpc_scanner_example.rs  message_signing.rs  python_wallet_example.py  scanner.rs  simple_signing_test.rs  storage_example.rs  test_known_wallet.rs  utxo_management.rs  wallet_cli.rs  wallet_example.rs  wallet_management.rs
examples/wasm/: Caddyfile  README.md  package.json  scanner.html  scanner.js
python-bindings/: .gitignore  Cargo.toml  interface.wai  loader.py  pyproject.toml  test-loader.py
python-bindings/pkg/: init_for_binding.txt
python-bindings/src/: errors.rs  lib.rs  runtime.rs  scanner.rs  storage.rs  transaction.rs  types.rs  utxo.rs
python-bindings/tests/: conftest.py  test_address_features.py  test_api_signatures.py  test_error_handling.py  test_fault_injection.rs  test_storage_integration.py  test_utxo_integration.py
src/: common.rs  errors.rs  hex_utils.rs  lib.rs  wasm.rs
src/crypto/: domain_separated_hasher.rs  hash_domain.rs  keys.rs  mod.rs  signing.rs
src/data_structures/: address.rs  block.rs  encrypted_data.rs  mod.rs  payment_id.rs  serialization_tests.rs  transaction.rs  transaction_input.rs  transaction_kernel.rs  transaction_output.rs  types.rs  wallet_output.rs  wallet_transaction.rs
src/extraction/: batch_validation.rs  corruption_detection.rs  encrypted_data_decryption.rs  extraction_integration_tests.rs  mod.rs  payment_id_extraction.rs  range_proof_extraction.rs  range_proof_rewinding.rs  special_output_handling.rs  stealth_address_key_recovery.rs  wallet_output_reconstruction.rs
src/key_management/: key_derivation.rs  mod.rs  seed_phrase.rs  stealth_address.rs
src/scanning/: grpc_scanner.rs  http_scanner.rs  mod.rs
src/storage/: mod.rs  sqlite.rs  sqlite.rs.bak  storage_trait.rs  tests.rs  thread_safe.rs
src/utils/: mod.rs  number.rs
src/validation/: batch.rs  commitment.rs  encrypted_data.rs  metadata_signature.rs  minimum_value_promise.rs  mod.rs  range_proofs.rs  script_pattern.rs  script_signature.rs
src/wallet/: mod.rs
tests/: cli_basic_tests.rs  cli_integration_tests.rs  stealth_address_integration.rs  storage_connection_tests.rs  test_python_bindings.py  test_python_scanning.py  test_python_signing.py
tests/e2e/: full_system_integration.rs  mod.rs  performance_stress.rs
tests/integration/: mod.rs  multi_network_compatibility.rs  scanning_workflow.rs  transaction_workflow.rs  wallet_workflow.rs
tests/wasm/: key_management.rs
