[package]
name = "lightweight_wallet_libs"
version = "0.1.0"
edition = "2021"
authors = ["The Tari Project"]
description = "Lightweight wallet libraries for Tari"
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari"
keywords = ["tari", "wallet", "cryptocurrency", "blockchain"]
categories = ["cryptography", "blockchain"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
borsh = { version = "1.5.7", features = ["derive"] }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }

# Cryptographic dependencies
tari_crypto = { version = "0.22" }
tari_utilities = { version = "0.8", features = ["std"] }
tari_script = { version = "1.0.0-rc.5" }
chacha20poly1305 = "0.10"
digest = "0.10"
blake2 = "0.10"
blake2b_simd = "1.0"
getrandom = "0.2"

# Hex encoding
hex = "0.4"

# CRC32 for checksums
crc32fast = "1.4"

# ChaCha20 for CipherSeed encryption
chacha20 = "0.9"

# Argon2 for CipherSeed key derivation
argon2 = "0.5"

# Primitive types
primitive-types = { version = "0.12", features = ["serde"] }

# New dependencies
curve25519-dalek = { version = "4.1", features = ["alloc"] }
rand_core = "0.6"
wasm-bindgen = "0.2"
subtle = "2.5"
rand = "0.8"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"

# Address dependencies
bs58 = "0.5"
lazy_static = "1.4"

# Parallel processing
rayon = { version = "1.8", optional = true }
num_cpus = "1.16"

# Async support for scanning
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# GRPC dependencies for blockchain scanning
tonic = { version = "0.10", features = ["tls", "tls-roots", "prost"], optional = true }
prost = { version = "0.12", optional = true }

# CLI argument parsing for examples
clap = { version = "4.4", features = ["derive"], optional = true }

# Added tracing-subscriber dependency
tracing-subscriber = "0.3"

# Async dependencies
futures = "0.3"

[dev-dependencies]
# Test dependencies
serde_json = "1.0"
wasm-bindgen-test = "0.3"

[build-dependencies]
tonic-build = "0.10"

[features]
default = []
wasm = ["getrandom/js"]
parallel = ["rayon"]
grpc = ["tonic", "prost", "clap"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] } 
