[package]
name = "lightweight_wallet_libs"
version = "0.1.1"
edition = "2021"
authors = ["Krakaw"]
description = "Lightweight wallet libraries for Tari"
license = "BSD-3-Clause"
repository = "https://github.com/Krakaw/tari-wallet"
keywords = ["tari", "wallet", "cryptocurrency", "blockchain"]
categories = ["cryptography", "blockchain"]

[package.metadata.cargo-machete]
ignored = [
    "tonic-build",  # Used in build.rs for GRPC code generation
    "prost",        # Used by generated GRPC protobuf code (verified by compilation test)
]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.5.7", features = ["derive"] }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }

# Cryptographic dependencies
tari_crypto = { version = "0.22" }
tari_utilities = { version = "0.8", features = ["std"] }
tari_script = { version = "1.0.0-rc.5" }
chacha20poly1305 = "0.10"
digest = "0.10"
blake2 = "0.10"
blake2b_simd = "1.0"
# getrandom = "0.2"  # Testing if this is needed explicitly

# Hex encoding
hex = "0.4"

# CRC32 for checksums
crc32fast = "1.4"

# ChaCha20 for CipherSeed encryption
chacha20 = "0.9"

# Argon2 for CipherSeed key derivation
argon2 = "0.5"

# Primitive types
primitive-types = { version = "0.12", features = ["serde"] }

# New dependencies
curve25519-dalek = { version = "4.1", features = ["alloc"] }
rand_core = "0.6"
wasm-bindgen = "0.2"
rand = "0.8"

# Address dependencies
bs58 = "0.5"
lazy_static = "1.4"

# Parallel processing
rayon = { version = "1.8", optional = true }
num_cpus = "1.16"

# Async support for scanning (optional for WASM compatibility)
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }

# GRPC dependencies for blockchain scanning
tonic = { version = "0.10", features = ["tls", "tls-roots", "prost"], optional = true }
prost = { version = "0.12", optional = true }

# CLI argument parsing for examples
clap = { version = "4.4", features = ["derive"], optional = true }

# Added tracing-subscriber dependency (optional)
tracing-subscriber = { version = "0.3", optional = true }

# SQLite storage dependencies (optional)
rusqlite = { version = "0.31", features = ["chrono", "serde_json", "blob"], optional = true }
tokio-rusqlite = { version = "0.5", optional = true }

[dev-dependencies]
# Test dependencies
serde_json = "1.0"
wasm-bindgen-test = "0.3"

[build-dependencies]
tonic-build = "0.10"

[features]
default = []
wasm = ["getrandom/js"]
grpc = ["rayon", "tonic", "prost", "clap", "async-trait", "tokio", "tracing", "tracing-subscriber"]
storage = ["rusqlite", "tokio-rusqlite", "async-trait", "tokio"]
grpc-storage = ["grpc", "storage"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] } 


[lib]
crate-type = ["cdylib", "rlib"]