[package]
name = "lightweight_wallet_libpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lightweight_wallet_libpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tari_utilities = { version = "0.8", features = ["std"] }
lightweight_wallet_libs = { path = ".." }
